# synth-experiment-rust

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: args.rs  lib.rs  music.rs  signal_player.rs
app/src/samples/: mod.rs
cpal-sample-player/: Cargo.toml
cpal-sample-player/src/: lib.rs
language/: Cargo.toml
language/src/: dsl.rs  lib.rs  signal.rs  synth_modules.rs
sdl2/: Cargo.toml
sdl2/src/: main.rs
src/: app.rs  main.rs  signal.rs  signal_player.rs  synth.rs  wrap.rs
synth/: Cargo.toml
synth-app/: Cargo.toml
synth-app/src/: app.rs  args.rs  lib.rs  main.rs  music.rs  signal_player.rs
synth-language/: Cargo.toml
synth-language/src/: dsl.rs  lib.rs  signal.rs  synth_modules.rs
synth-sdl2/: Cargo.toml
synth-sdl2/src/: main.rs
synth-wgpu/: Cargo.toml
synth-wgpu/src/: main.rs
synth/src/: app.rs  app_.rs  dsl.rs  main.rs  signal.rs  signal_.rs  signal_player.rs  synth.rs  wrap.rs
web/: Cargo.toml  README.md  index.html  package-lock.json  package.json
web/src/: lib.rs
