[package]
name = "synth_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chargrid = { git = "https://github.com/gridbugs/chargrid", rev = "5570cb5547f3fcdd3db18c2f7756895cfd78304d" }
cpal_sample_player = { path = "../cpal-sample-player" }
line_2d = "0.5"
meap = "0.8"
rgb_int = "0.1"
synth_language = { path = "../synth-language" }
