[package]
name = "synth_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chargrid = { path = "/Users/s/src/chargrid/chargrid" }
cpal_sample_player = { path = "../cpal-sample-player" }
hound = "3.5"
line_2d = "0.5"
meap = "0.8"
rgb_int = "0.1"
synth_language = { path = "../synth-language" }
